# traits-audit

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-pages.yml
docs/: Makefile  changelog.rst  checks.rst  conf.py  custom_checks.rst  demo_calibration.rst  demo_camd.rst  demo_pybamm.rst  demo_sdl.rst  hook_pipeline_map.md  index.md  index.rst  installation.rst  integration.rst  mlflow.rst  quickstart.rst
docs/api/: base.rst  checks.rst  hook.rst  index.rst  mlflow_logger.rst  pipeline.rst
scripts/: visualize_builtin_metrics.py
src/traits_audit/: __init__.py  _camd_demo.py  _example.py  _lyapunov.py  _pybamm_demo.py  _sdl_demo.py  _viz.py  base.py  detrend.py  dmdc.py  hook.py  mlflow_logger.py  pipeline.py  trajectory.py
src/traits_audit/checks/: __init__.py  calibration.py  conformal.py  coverage.py  lyapunov.py  pit.py  scoring.py  uncertainty.py
tests/: conftest.py  test_base.py  test_checks.py  test_demos.py  test_detrend.py  test_dmdc.py  test_example.py  test_hook.py  test_pipeline.py
