[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traits-audit"
version = "0.1.3"
description = "Passive uncertainty audit framework for active learning loops"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["active learning", "uncertainty quantification", "Bayesian optimization", "MLflow", "calibration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    { name = "Ashley Dale", email = "trustworthyai4sci@gmail.com" },
]
dependencies = [
    "kaleido>=1.3.0",
    "matplotlib",
    "numpy",
    "scikit-learn",
    "scipy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/TRustworthy-AI-Tools-for-Science/traits-audit"
Repository = "https://github.com/TRustworthy-AI-Tools-for-Science/traits-audit.git"
Issues = "https://github.com/TRustworthy-AI-Tools-for-Science/traits-audit/issues"
Documentation = "https://trustworthy-ai-tools-for-science.github.io/traits-audit/"

[project.scripts]
ta-demo        = "traits_audit._example:main"
ta-sdl-demo    = "traits_audit._sdl_demo:main"
ta-camd-demo   = "traits_audit._camd_demo:main"
ta-pybamm-demo = "traits_audit._pybamm_demo:main"

[project.optional-dependencies]
mlflow  = ["mlflow", "plotly", "matplotlib"]
sdl     = ["self-driving-lab-demo", "ax-platform>=1.3.0"]
camd    = ["camd==2022.8.24", "scikit-learn", "pandas", "pymatgen", "matminer", "django", "PuLP"]
pybamm  = ["pybamm", "scikit-learn"]
docs = [
    "sphinx>=7",
    "furo",
    "myst-parser",
    "sphinx-autodoc-typehints",
]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/traits_audit"]

[tool.uv]
# camd (via qmpy-tri) hard-pins bokeh==0.12.15, which has no wheel for
# Python >=3.11 and fails to build from source (its versioneer.py calls
# configparser.SafeConfigParser, removed in 3.12). camd itself also
# hard-pins GPy==1.10.0, whose last wheels are cp39, and matplotlib==3.5.3,
# whose last wheels are cp310 (both would otherwise force a source build on
# this project's supported Python versions). None of the three are ever
# imported by camd.agent.stability/camd.analysis/camd.utils.data or the
# qmpy.analysis.thermodynamics.phase/space modules that path uses (bokeh and
# GPy are only used by unrelated camd/qmpy submodules we don't import;
# matplotlib is only used inside plotting methods we never call) — so it's
# safe to override to modern, installable versions rather than the exact
# pins, instead of vendoring a patched bokeh/GPy build.
override-dependencies = [
    "bokeh>=3",
    "GPy>=1.13",
    "matplotlib>=3.5.3",
    "boto3>=1.24.51",
    "awscli>=1.32",
    "matminer>=0.9",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
traits-audit = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "traits-audit[mlflow,camd,pybamm,sdl]",
    "pytest>=8",
    "pytest-cov>=5",
]
